fix bug with nav on mobile

--- a/ecom_website/styles.css
+++ b/ecom_website/styles.css
@@ -570,6 +570,10 @@ footer {
   #featured:after {
     bottom: -1px;
   }
+
+  .header__description {
+    padding-top: 84px;
+  }
 }
 
 /* PHONES */
